<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="25dp"
    android:background="@android:color/transparent"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tv_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/alert_message"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <Button
                            android:id="@+id/btn_no"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_corner"
                            android:text="@string/no"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btn_yes"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_corner"
                            android:text="@string/yes"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:id="@+id/image_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:baselineAlignBottom="false"
        android:src="@drawable/police"
        android:visibility="visible" />

</RelativeLayout>

