<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PersonalInformation">

    <LinearLayout
        android:id="@+id/addProductLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:theme="@style/ToolbarColoredBackArrow"
            app:titleTextColor="@color/white" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="15dp"
            android:visibility="visible"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_5"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.2"
                            android:gravity="center_vertical"
                            android:text="@string/name"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/name_value"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight=".8"
                            android:background="@drawable/rectangale"
                            android:gravity="center"
                            android:hint="@string/name"
                            android:inputType="textCapWords"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_5"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.2"
                            android:gravity="center_vertical"
                            android:text="@string/mobile"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/product_value"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight=".8"
                            android:background="@drawable/rectangale"
                            android:gravity="center"
                            android:hint="@string/mobile"
                            android:inputType="phone"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="@dimen/padding_5"
                        android:weightSum="2">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.2"
                            android:gravity="center_vertical"
                            android:text="@string/email_address"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/product_id_value"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight=".8"
                            android:background="@drawable/rectangale"
                            android:gravity="center"
                            android:hint="@string/email_address"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black" />

                    </LinearLayout>


                </LinearLayout>

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_corner"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>